# arcl_youbot

./: README.md  install.sh  setup.sh  youbot_ros_variable.sh
adaptive_pushing-master/: CMakeLists.txt  package.xml
adaptive_pushing-master/src/: PlacePlanAction.cpp  PlacePlanBaselineAction.cpp  PlacePlanFixAction.cpp
adaptive_pushing-master/srv/: PlacePlan.srv
arcl_youbot_application/: CMakeLists.txt  package.xml  setup.py
arcl_youbot_application/action/: LocalManipulation.action  Manipulation.action
arcl_youbot_application/msg/: PlanningSceneMsg.msg  SceneObjectMsg.msg
arcl_youbot_application/scripts/: 04_19_dp.pkl  05_run_dp.pkl  05_run_greedy.pkl  10_run_dp.pkl  10_run_greedy.pkl  15_run_dp.pkl  15_run_greedy.pkl  ISRR_experiment.py  TRO_gazebo_experiment.py  TSP_DP.py  TSP_DP_new.py  TSP_DP_new_back.py  benchmark.csv  build_roadmap.py  current_scene.txt  declutter_in_gazebo.py  experiment_test.py  forklift_demo.py  get_picking_vector.py  get_train_pic.py  image_pub.py  kai.py  kai_gazebo_TSP_DP.py  kai_gazebo_real_TSP_DP.py  kai_real_TSP_DP.py  keyboard_control.py  kill_switch.py  main.py  multi_test.py  new_12_01_dp.pkl  new_12_01_greedy.pkl  new_12_02_dp.pkl  new_12_02_greedy.pkl  new_12_03_dp.pkl  new_12_03_greedy.pkl  new_12_04_dp.pkl  new_12_04_greedy.pkl  new_12_05_dp.pkl  new_12_05_greedy.pkl  new_12_06_dp.pkl  (+15 more)
arcl_youbot_application/src/: LocalManipulationServer.cpp  ManipulationServer.cpp  gazeboUtility.cpp  planningScene.cpp  planningSceneObject.cpp  utilities.cpp
arcl_youbot_kinematics/: .gitignore  CMakeLists.txt  package.xml  setup.py
arcl_youbot_kinematics/include/arcl_youbot_kinematics/: arm_dynamics.h  arm_kinematics.h  constants.h
arcl_youbot_kinematics/scripts/: test.py
arcl_youbot_kinematics/src/: arm_dynamics.cpp  cartesian_vector.cpp  cylindric_vector.cpp  generic_vector.cpp  joint_vector.cpp  wrap.cpp
arcl_youbot_msgs/: CMakeLists.txt  package.xml
arcl_youbot_msgs/action/: MoveBase.action  MoveCartesianPath.action  MoveCylindricPath.action  MoveJointPath.action  MoveNamedPath.action
arcl_youbot_msgs/msg/: AllMask.msg  SingleMask.msg
arcl_youbot_msgs/srv/: GetArmPose.srv  GetLoad.srv  SetCartesianVelocity.srv  SetCylindricVelocity.srv  SetJointVelocity.srv
arcl_youbot_planner/: CMakeLists.txt  package.xml  setup.py
arcl_youbot_planner/scripts/: youbot_planner_test.py
arcl_youbot_poses/: CMakeLists.txt  package.xml
arcl_youbot_poses/src/: youbot_poses.cpp
arcl_youbot_vision/: CMakeLists.txt  package.xml
arcl_youbot_vision/src/: pointcloud_process.cpp  target_selector.cpp  util.cpp
luh_youbot_controller/: CMakeLists.txt
luh_youbot_controller/launch/: controller.launch  controller_with_hokuyo.launch  gazebo_controller.launch  gazebo_controller_multi.launch  load_default_parameters.launch  youbot_state_publisher.launch
luh_youbot_controller_api/: CMakeLists.txt  package.xml
luh_youbot_controller_api/src/: youbot_arm.cpp  youbot_base.cpp  youbot_gripper.cpp
luh_youbot_controller_broken/: setup.py
luh_youbot_controller_broken/launch/: controller.launch  gazebo_controller.launch
luh_youbot_controller_copy/: CMakeLists.txt  package.xml
luh_youbot_controller_copy/examples/: simple_module_example.cpp  simple_module_example.h
luh_youbot_description/robots/: youbot.urdf.xacro  youbot.urdf1.xacro  youbot.urdf2.xacro  youbot.urdf3.xacro  youbot.urdf4.xacro  youbot_0.urdf  youbot_1.urdf  youbot_gazebo.xacro
luh_youbot_driver_api/: CMakeLists.txt  package.xml  setup.py
luh_youbot_driver_api/include/luh_youbot_driver_api/: base_interface.h  common.h  youbot_interface.h
luh_youbot_driver_api/src/: arm_interface.cpp  base_interface.cpp  youbot_interface.cpp
luh_youbot_driver_api/src/luh_youbot_driver_api/: arm_interface.py  base_interface.py  youbot_interface.py
luh_youbot_driver_api_backup/: CMakeLists.txt  package.xml
luh_youbot_driver_api_backup/src/: arm_interface.cpp
luh_youbot_gazebo/: CMakeLists.txt  package.xml
luh_youbot_gazebo/launch/: youbot.launch  youbot_two_ground_only.launch
luh_youbot_gazebo_copy/: CMakeLists.txt  package.xml
luh_youbot_gazebo_old/: CMakeLists.txt  package.xml  setup.py
luh_youbot_gripper/: CMakeLists.txt  package.xml
my_youbot_pkg/: CMakeLists.txt  package.xml
support_relation/: CMakeLists.txt  package.xml
test_pcd/: 1584825500.932776.pcd  1584825685.733114.pcd  1584826628.279630.pcd
youbot_grasp/: CMakeLists.txt  package.xml
(+484 files in other folders)
