<?xml version="1.0"?>
<package>
  <name>arcl_youbot_kinematics</name>
  <version>1.0.0</version>
  <description>The Youbot Kinematics provides tools to calculate forward kinematics, inverse kinematics and statics of the youbot manipulator. </description>

  <maintainer email="wei.tang@rutgers.edu">Wei Tang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>arcl_youbot_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pybind11_catkin</build_depend>
  <run_depend>arcl_youbot_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pybind11_catkin</run_depend>

</package>
